# gcolpicker

./: .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gcolor2.glade  gcolor2.gladep  gcolor2.spec.in  gcolpicker.spec.in  intltool-update
pixmaps/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
